# backend/server.js
@@ -26,7 +26,6 @@ const departmentRoutes = require("./src/routes/departmentRoutes");
 const subDepartmentRoutes = require("./src/routes/subDepartmentRoutes");
 const levelRoutes = require("./src/routes/levelRoutes");
 const subLevelRoutes = require("./src/routes/subLevelRoutes");
-const sessionRoutes = require("./src/routes/sessionRoutes");
 const passport = require("./src/config/passport.js");
 
 // Swagger setup
@@ -44,7 +43,7 @@ app.use('/api/departments', departmentRoutes);
 app.use('/api/subdepartments', subDepartmentRoutes);
 app.use('/api/levels', levelRoutes);
 app.use('/api/sublevels', subLevelRoutes);
-app.use('/api/sessions', sessionRoutes);
+
 
 // Passport initialization
 app.use(passport.initialize());
