# backend/src/routes/index.js
@@ -10,11 +10,7 @@ const faceAuthRoutes = require('./faceAuthRoutes');
 const reportCardRoutes = require('./reportCardRoutes');
 const protectedRoutes = require('./protectedRoutes');
 const webhookRoutes = require('./webhookRoutes');
-const taskRoutes = require('./taskRoutes');
 const roleRoutes = require('./roleRoutes');
-const taskMasterRoutes = require('./taskMasterRoutes');
-const syllabusVersionRoutes = require('./syllabusVersionRoutes');
-const sessionRoutes = require('./sessionRoutes');
 
 // Mount routes
 router.use('/user', userRoutes);
@@ -24,11 +20,7 @@ router.use('/admission/students', studentAdmissionRoutes);
 router.use('/face-auth', faceAuthRoutes);
 router.use('/reportcards', reportCardRoutes);
 router.use('/protected', protectedRoutes);
-router.use('/tasks', taskRoutes);
 router.use('/roles', roleRoutes);
-router.use('/task-master', taskMasterRoutes);
-router.use('/syllabus-versions', syllabusVersionRoutes);
-router.use('/sessions', sessionRoutes);
 
 // Webhook routes
 router.use('/admission/students/webhook', webhookRoutes);
